fix: go-down arrow not centered while animation

--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,11 @@ svg {
   50%,
   80%,
   100% {
-    transform: translateY(0);
+    transform: translate(-50%, 0);
   }
   40%,
   60% {
-    transform: translateY(-0.9375rem);
+    transform: translate(-50%, -0.9375rem);
   }
 }
 
